Hide links in xs. Fix #180 / Fix #181. (Banner could be smaller still, but leave it for now.)

--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -13,7 +13,7 @@
           <span class="glyphicon glyphicon-search"></span>
         </form>
       </div>
-      <div class="col-md-9 hidden-sm nav">
+      <div class="col-md-9 hidden-sm hidden-xs nav">
         <%= link_to(t('series'), '/series') %>
         <%= link_to(t('exhibits'), '/exhibits') %>
         <%= link_to(t('collections'), '/collections') %>
