Image pages work. Fix #220. and add a test.

--- a/app/views/catalog/_player.html.erb
+++ b/app/views/catalog/_player.html.erb
@@ -1,6 +1,6 @@
 <div id="player">
   <% if  @pbcore.image? %>
-    <%= tag('img', src: @pbcore.proxy_src) %>
+    <%= tag('img', src: @pbcore.proxy_srcs.first) %>
   <% else %>
     <% 
       # These should be complementary. The goal is to keep the 
