--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -21,7 +21,8 @@
       <div class="col-md-4 col-xs-12">
         <img src="<%= (params[:controller] == 'home') ? "/wgbh-logo-grey.svg" : "/wgbh-logo.svg" %>" />
         <div class="copyright">
-          Copyright &copy; 2015 WGBH Educational Foundation<br/>
+          Copyright &copy; 2015 WGBH <br/>
+          Educational Foundation<br/>
           All rights reserved
         </div>
       </div>
