--- a/app/views/shared/_collection_exhibit_grid.html.erb
+++ b/app/views/shared/_collection_exhibit_grid.html.erb
@@ -14,7 +14,7 @@
       <div class="info">
         <h2><%= item.title %></h2>
         <% if item.respond_to? :author %>
-          by <%= item.author %>
+          by <%= item.author.html_safe %>
         <% end %>
       </div>
     </div>
