Series page looks good.

--- a/app/assets/stylesheets/globals/defaults.css.scss
+++ b/app/assets/stylesheets/globals/defaults.css.scss
@@ -6,5 +6,6 @@ html > body {
     a:hover { text-decoration: none; } // No examples in specs of underline.
     h1 {
         font-size: 48px;
+        padding-bottom: 20px;
     }
 }
