Bylines tighter, and a bit of space after title.

--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -13,8 +13,9 @@
            margin-top: 0;
            margin-bottom: $grid-gutter-width;
            h2 {
-               margin: 0;
+               margin: $grid-gutter-width*0.25 0;
            }
+           line-height: 1.2;
         }
     }
 }
