padding above breadcrumb.

--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -46,7 +46,8 @@
 
 .blacklight-collections-show,.blacklight-exhibits-show {
     #main-container {
-      
+        padding-top: 20px;
+
         a.back {
            font-size: 24px;
         }
