--- a/app/views/shared/_above_tabs.html.erb
+++ b/app/views/shared/_above_tabs.html.erb
@@ -3,9 +3,9 @@
 </h1>
 
 <% if item.respond_to?(:author) %>
-  <h2 class="byline">
+  <div class="byline">
     By <%= item.author.html_safe %>
-  </h2>
+  </div>
 <% end %>
 
 <div class="pull-left col-sm-4" >
