Do not use full width for text heavy pages.

--- a/app/views/override/show.html.erb
+++ b/app/views/override/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-11 col-lg-9">
       <h1><%= @page_title %></h1>
       <%= @override.body_html.html_safe %>
     </div>
