--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -9,7 +9,7 @@
     <div class="row">
       <div class="col-md-3">
         <form action="/catalog">
-          <input name="q" onchange="this.form.submit()"/>
+          <input name="q" placeholder="Search..." onchange="this.form.submit()"/>
           <span class="glyphicon glyphicon-search"></span>
         </form>
       </div>
