--- a/app/views/catalog/_search_header.html.erb
+++ b/app/views/catalog/_search_header.html.erb
@@ -1,5 +1,3 @@
-<%= render 'did_you_mean' %>
-
+<%# Not using did_you_mean %>
 <%# Moved constraints above sidebar in DOM order. = render 'constraints' %>
-
-<%= render 'sort_and_per_page' %>
+<%# Moved sort_and_per_page into document_list. %>
