Fix #226. Sharing a key for url and localization could go too far, but I think this is good for now.

--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -1,2 +1,2 @@
 <%= render partial: 'shared/collection_exhibit_show',
-           locals: {parent_url: '/collections', item: @item} %>
+           locals: {parent: 'collections', item: @item} %>
