--- a/app/views/exhibits/show.html.erb
+++ b/app/views/exhibits/show.html.erb
@@ -1,2 +1,2 @@
 <%= render partial: 'shared/collection_exhibit_show',
-           locals: {parent_url: '/exhibits', item: @item} %>
+           locals: {parent: 'exhibits', item: @item} %>
