--- a/app/views/shared/_collection_exhibit_show.html.erb
+++ b/app/views/shared/_collection_exhibit_show.html.erb
@@ -5,7 +5,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <a href="<%= parent_url %>" class="back"><%= t('collections') %></a>
+      <a href="/<%= parent %>" class="back"><%= t(parent) %></a>
       <%= render partial: 'shared/above_tabs', locals: {item: item} %>
     </div>
   </div>
