--- a/app/views/shared/_collection_exhibit_show.html.erb
+++ b/app/views/shared/_collection_exhibit_show.html.erb
@@ -9,7 +9,7 @@
       <%= render partial: 'shared/above_tabs', locals: {item: item} %>
     </div>
   </div>
-  <%= render partial: 'shared/tab_row', locals: {item: item, skip: ['intro', 'extra']}%>
+  <%= render partial: 'shared/tab_row', locals: {item: item, skip: ['intro']}%>
   <div class="row">
     <div class="col-md-12">
       <% item.tabs[params[:tab]].tap do |current_tab| %>
@@ -32,9 +32,6 @@
           <%= current_tab.html_safe if current_tab %>
         <% end %>
       <% end %>
-    </div>
-    <div class="col-md-12">
-      <%= item.tabs['extra'].html_safe if item.tabs['extra']%>
     </div>
   </div>
 </div>
