--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -89,9 +89,12 @@
         
         iframe {
             // (For embeds)
-            width: 380px;
-            height: 260px;
+            // If this were really wide, we might want media queries,
+            // but seems like enough for now.
+            width: 700px;
+            height: 300px;
             border: none;
+            background: $pale-grey;
         }
     }
 }
