--- a/app/views/embed/show.html.erb
+++ b/app/views/embed/show.html.erb
@@ -4,9 +4,13 @@
     <%= render partial: 'catalog/player' %>
   </div>
   <h2>
-    <a href="/catalog/<%= @pbcore.id %>"><%= @pbcore.asset_title %></a>
+    <a href="/catalog/<%= @pbcore.id %>"><%=
+      @pbcore.asset_title || @pbcore.program_title || @pbcore.series_title
+    %></a>
   </h2>
   <p>
-    <%= @pbcore.asset_description.html_safe %>
+    <%= (
+      @pbcore.asset_description || @pbcore.program_description || @pbcore.series_description
+    ).html_safe %>
   </p>
 </div>
