--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -43,6 +43,27 @@
             ].each do |field_def| %>
           <%= render partial: 'pbcore_field', locals: field_def %>
         <% end %>
+        <dt>Citation</dt>
+        
+        <% url = "http://openvault.wgbh.org/catalog/#{@pbcore.id}" %>
+        <% today = Date.today.to_formatted_s(:long) %>
+        
+        <dd><em>Chicago</em>: 
+            &ldquo;<%= @pbcore.title %>,&rdquo;
+            <%= @pbcore.date + ',' if @pbcore.date %> 
+            WGBH Media Library &amp; Archives, 
+            accessed <%= today %>, 
+            <%= url %>.</dd>
+        <dd><em>MLA</em>:
+            &ldquo;<%= @pbcore.title %>.&rdquo;
+            <%= @pbcore.date + '.' if @pbcore.date %>
+            WGBH Media Library &amp; Archives.
+            Web. <%= today %>. 
+            &lt;<%= url %>&gt;.</dd>
+        <dd><em>APA</em>:
+            <%= @pbcore.title %>.
+            Boston, MA: WGBH Media Library &amp; Archives.
+            Retrieved from <%= url %></dd>
       </dl>
     </div>
   </div>
