--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -58,8 +58,11 @@
            font-size: 24px;
         }
 
+        h1.page-title {
+          padding-bottom: 10px;
+        }
+
         .byline {
-            margin-top: -10px;
             margin-bottom: 20px;
         }
 
