--- a/app/assets/stylesheets/locals/catalog-show.css.scss
+++ b/app/assets/stylesheets/locals/catalog-show.css.scss
@@ -3,7 +3,7 @@
         margin: $grid-gutter-width/4 0;
     }
     dt {
-        font-weight: bold;
+        font-weight: $semibold;
     }
     dd {
         padding-left: $grid-gutter-width;
