We were defaulting to only the digitized records, and that is often an empty set.

--- a/app/views/series/index.html.erb
+++ b/app/views/series/index.html.erb
@@ -15,7 +15,7 @@
         </div>
         <ul>
           <% group.each do |pair| %>
-            <li><a href="/catalog?f[series_title][]=<%= CGI.escape(pair.first) %>">
+            <li><a href="/catalog?<%= {f: {access: [PBCore::ALL], series_title: [pair.first]}}.to_query %>">
               <%= pair.first %> (<%= pair.second %>)
             </a></li>
           <% end %>
