--- a/app/assets/stylesheets/locals/catalog-show.css.scss
+++ b/app/assets/stylesheets/locals/catalog-show.css.scss
@@ -11,6 +11,7 @@
     #player {
         background-color: $pale-grey;
         padding: $grid-gutter-width/2 0;
+        video, audio { width: 100%; } 
     }
     #playlist {
         width: 100%;
