target _blank. fix #309.

--- a/app/views/embed/show.html.erb
+++ b/app/views/embed/show.html.erb
@@ -4,7 +4,7 @@
     <%= render partial: 'catalog/player' %>
   </div>
   <h2>
-    <a href="/catalog/<%= @pbcore.id %>"><%=
+    <a href="/catalog/<%= @pbcore.id %>" target="_blank"><%=
       @pbcore.asset_title || @pbcore.program_title || @pbcore.series_title
     %></a>
   </h2>
