Use the right side for misc messaging. fix #310, fix #311.

--- a/app/assets/stylesheets/locals/catalog-show.css.scss
+++ b/app/assets/stylesheets/locals/catalog-show.css.scss
@@ -11,7 +11,8 @@
     #player {
         background-color: $pale-grey;
         padding: $grid-gutter-width/2 0;
-        img, video, audio { width: 100%; } 
+        img, video, audio { width: 100%; }
+        iframe { width: 100%; }
     }
     #playlist {
         width: 100%;
