D'oh: needs one more level of nesting.

--- a/app/views/catalog/_pbcore_field.html.erb
+++ b/app/views/catalog/_pbcore_field.html.erb
@@ -10,7 +10,7 @@
     <dd><%=
       if facet_link
         link_to(value, '/catalog?' + {
-            f: { field => value.to_s }
+            f: { field => [value.to_s] }
           }.to_query )
       elsif search_link
         link_to(value, '/catalog?' + {
