Reserve space with a transparent border to prevent re-flows.

--- a/app/assets/stylesheets/locals/plain.css.scss
+++ b/app/assets/stylesheets/locals/plain.css.scss
@@ -23,9 +23,12 @@
             color: $dark-blue;
             padding-right: 0.3em;
         }
-        .current {
-            border: 2px solid $light-grey;
+        .para {
+            border: 2px solid transparent;
             border-radius: 8px;
+        }
+        .para.current {
+            border-color: $light-grey
         }
     }
 }
