--- a/app/assets/stylesheets/locals/home.css.scss
+++ b/app/assets/stylesheets/locals/home.css.scss
@@ -2,6 +2,22 @@
     
     .carousel {
         margin-top: -1px; // Flash div above inserts a gap.
+        // Set height to half width: not necessary if imgs sized correctly.
+        overflow: hidden;
+        @media ( min-width: $screen-sm-min ) {
+            height: 360px;
+        }
+        @media ( min-width: $screen-md-min ) {
+            height: 472.5px; // Img is same width even in lg.
+        }
+        // Carousel does not show in xs, and I'm ok with that.
+        .carousel-inner {
+            position: absolute;
+            bottom: 0; // If imgs are sized correctly, this is not necessary.
+            img {
+                width: 100%;
+            }
+        }
         .carousel-control {
             background: $transparent;
             padding: 50px 0px;
