--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 col-lg-10 col-lg-offset-1">
       <%= render partial: 'carousel' %>
     </div>
   </div>
