--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -19,7 +19,7 @@
         <p><%= link_to('Visiting the Archives', '/visiting-the-archives') %></p>
       </ul>
       <div class="col-md-4 col-xs-12">
-        <img src="<%= (params[:controller] == 'home') ? "/wgbh-logo-grey.svg" : "/wgbh-logo.svg" %>" />
+        <%= render partial: 'shared/wgbh_logo.svg' %>
         <div class="copyright">
           Copyright &copy; 2015 WGBH <br/>
           Educational Foundation<br/>
