--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -2,8 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3">
-        <a href="/"><img src="/ov-logo.png"/></a>
-        <br/><br/>
+        <a href="/"><%= render partial: 'shared/ov_logo.svg' %></a>
       </div>
     </div>
     <div class="row">
