Split into smaller partials; more readable. No change to rendering.

--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -11,7 +11,7 @@
       
       <%= content_tag('p', @pbcore.asset_description) %>
       
-      <%= render partial: 'player' %>
+      <%= render partial: 'catalog/player/player' %>
       
       <dl>
         <% [
