--- a/app/views/embed/show.html.erb
+++ b/app/views/embed/show.html.erb
@@ -1,7 +1,7 @@
 <%# Inline styles for now: we might make them URL params at some point? %>
 <div>
   <div style="width: 380px; float: left;">
-    <%= render partial: 'catalog/player' %>
+    <%= render partial: 'catalog/player/player' %>
   </div>
   <h2>
     <a href="/catalog/<%= @pbcore.id %>" target="_blank"><%=
