--- a/app/views/catalog/player/_player_left.html.erb
+++ b/app/views/catalog/player/_player_left.html.erb
@@ -10,7 +10,7 @@
 
   <% if geoblocked? %>
     <strong>Note:</strong> This content is not available in your region.
-  <% elsif !@pbcore.proxy_srcs.empty? %>
+  <% elsif !@pbcore.proxy_srcs.empty? && !@pbcore.image? %>
     <%= content_tag(@pbcore.video? ? 'video' : 'audio', 
                   controls: true, id: 'player-media',
                   oncontextmenu: 'return false;',
