--- a/app/assets/stylesheets/locals/catalog-show.css.scss
+++ b/app/assets/stylesheets/locals/catalog-show.css.scss
@@ -17,4 +17,11 @@
     #playlist {
         width: 100%;
     }
+    #password-modal {
+        #hint {
+            font-family: monospace;
+            font-weight: bold;
+            background: $pale-grey;
+        }
+    }
 }
