I always forget this.

--- a/app/views/catalog/_password_modal.html.erb
+++ b/app/views/catalog/_password_modal.html.erb
@@ -24,7 +24,7 @@
         <button type="submit" class="btn btn-primary" onclick="
           // When I copy-and-paste, I get a space character at the beginging...
           // not sure why, but replace cleans it up.
-          if ($('#password').val().replace(/\W/g,'') === $('#hint').text() && $('#read-and-agree').is(':checked')) {
+          if ($('#password').val().replace(/\W/g,'') === $('#hint').text() &amp;&amp; $('#read-and-agree').is(':checked')) {
             $('#password-modal').modal('hide');
           } else {
             alert('Please confirm your agreement and provide the password.');
