More padding on the right. Fix #366.

--- a/app/assets/stylesheets/locals/header-footer.css.scss
+++ b/app/assets/stylesheets/locals/header-footer.css.scss
@@ -7,7 +7,7 @@
         text { fill: #FFF;  }
     }
     input {
-        padding: 0 8px;
+        padding: 0px 28px 0px 8px;
         color: #000;
     }
     form .glyphicon {
