Experiment: highlight search results in context.

--- a/app/views/shared/_document.html.erb
+++ b/app/views/shared/_document.html.erb
@@ -8,3 +8,9 @@
     <%= document[:title] %>
   </div>
 </a>
+
+<% document.response[:highlighting][document.id][:text].each do |html| %>
+  <blockquote>
+    <%= html.html_safe %>
+  </blockquote>
+<% end %>
