Update footer with MPOT

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,6 +14,7 @@
         <p><%= link_to('Contact Us', '/contact-us') %></p>
         <p><%= link_to('Help', '/help') %></p>
         <p><%= link_to('Credits', '/credits') %></p>
+        <p><%= link_to('Media Production Organizational Tools', '/media-production-organizational-tools') %></p>
         <p><%= link_to('Privacy Policy', '/privacy-policy') %></p>
         <p><%= link_to('Terms and Conditions', '/terms-and-conditions') %></p>
         <p><%= link_to('Visiting the Archives', '/visiting-the-archives') %></p>
