button style. Fix #357.

--- a/app/assets/stylesheets/globals/defaults.css.scss
+++ b/app/assets/stylesheets/globals/defaults.css.scss
@@ -8,4 +8,8 @@ html > body {
         font-size: 48px;
         padding-bottom: 20px;
     }
+    .btn-primary {
+        background: $medium-blue;
+        border: none;
+    }
 }
