--- a/app/views/catalog/_password_modal.html.erb
+++ b/app/views/catalog/_password_modal.html.erb
@@ -7,7 +7,7 @@
       <div class="modal-body">
           <p>
             To access this material, 
-            please read the terms and conditions,
+            please read the Rules of Use,
             indicate your agreement,
             and provide the password. 
           </p>
