Could tweak more, but lets merge, and see how it looks with new linespacing.

--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -107,5 +107,15 @@
             border: none;
             background: $pale-grey;
         }
+        
+        ul#tabs {
+            list-style: none;
+            position: relative;
+            li .pointer {
+                position: absolute;
+                left: 0px;
+            }
+        }
+        
     }
 }
