--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -111,6 +111,7 @@
         ul#tabs {
             list-style: none;
             position: relative;
+            font-weight: $medium;
             li .pointer {
                 position: absolute;
                 left: 0px;
