--- a/app/assets/stylesheets/globals/defaults.css.scss
+++ b/app/assets/stylesheets/globals/defaults.css.scss
@@ -2,7 +2,9 @@ $font-family: 'sans-serif' !default;
 
 html > body {
     font-family: $font-family;
-    font-size: 18px; // Best guess
+    font-size: 18px;
+    line-height: 35px;
+    p { margin: 0 0 40px; }
     a:hover { text-decoration: none; } // No examples in specs of underline.
     h1 {
         font-size: 48px;
