--- a/app/views/shared/_grid.html.erb
+++ b/app/views/shared/_grid.html.erb
@@ -1,4 +1,4 @@
-<div class="documents">
+<div class="documents row">
   <%
     grid = 12 # Needs to match bootstrap's $grid-columns
     col_classes = cols.map { |k,v| "col-#{k}-#{grid / v}"}.join(' ')
