Signature to 50%, and fix margins. Fix #450.

--- a/app/views/shared/_above_tabs.html.erb
+++ b/app/views/shared/_above_tabs.html.erb
@@ -8,7 +8,7 @@
   </div>
 <% end %>
 
-<div class="pull-left col-sm-4" >
+<div class="signature col-sm-6" >
   <img src="<%= item.img_src %>"/>
 </div>
 
