--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -66,12 +66,10 @@
             margin-bottom: 20px;
         }
 
-        div.pull-left img {
-            // This is very ad hoc.
-            margin-left: -$grid-gutter-width/2;
-            margin-right: $grid-gutter-width/2;
-            margin-bottom: $grid-gutter-width;
+        div.signature img {
+            margin: $grid-gutter-width/2 $grid-gutter-width/2 -$grid-gutter-width $grid-gutter-width/2;
             width: 100%;
+            float: left !important;
         }
 
         #tabs {
